--- a/demonstration.html
+++ b/demonstration.html
@@ -80,94 +80,10 @@
                         src="image/SongBuilderColourIcon96.png"
                         width="74" align="left" height="74"></td>
                     <td style=" vertical-align: top;">
-                      <div class="centre"><span class="header">SongBase</span><br>
+                      <div class="centre"><span class="header">Audovia</span><br>
                       </div>
-                      <div class="subheader"><span class="subheader"><em>database
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            application for making music using JFugue
-                            MusicStrings</em></span></div>
+                      <div class="subheader"><span class="subheader"><em>a
+                            different way to make music</em></span></div>
                     </td>
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
@@ -259,9 +175,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -434,6 +352,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -458,6 +377,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -467,10 +387,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -486,10 +408,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -592,6 +516,7 @@ src="https://player.vimeo.com/video/123503762?title=0&amp;byline=0&amp;portrait=
                           to create a song, then <em>File/Tree View</em>
                           and expand the nodes.&nbsp; Select each bar in
                           turn and enter the notes<strong><em></em></strong>.&nbsp;
+
 
 
 
