--- a/examples.html
+++ b/examples.html
@@ -80,81 +80,10 @@
                         src="image/SongBuilderColourIcon96.png"
                         width="74" align="left" height="74"></td>
                     <td style=" vertical-align: top;">
-                      <div class="centre"><span class="header">SongBase</span><br>
+                      <div class="centre"><span class="header">Audovia</span><br>
                       </div>
-                      <div class="subheader"><span class="subheader"><em>database
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            application for making music using JFugue
-                            MusicStrings</em></span></div>
+                      <div class="subheader"><span class="subheader"><em>a
+                            different way to make music</em></span></div>
                     </td>
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
@@ -233,9 +162,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -382,6 +313,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -403,10 +335,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
             <a href="demonstration.html" style="text-decoration:none;"><button
@@ -415,16 +349,19 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
                       Us</b></big></font></button></a> </td>
@@ -626,6 +563,7 @@ href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=shar
 
 
 
+
                                           XML</a>)</em></span> </td>
                                 </tr>
                               </tbody>
@@ -730,14 +668,14 @@ myAudioitem.pause();
                         Microsoft Windows but not with Linux. &nbsp;Due
                         to licensing reasons we are unable to include
                         GM.DLS with the Linux versions of <span
-                          style="font-weight: bold;">SongBase</span>.<br>
+                          style="font-weight: bold;">Audovia</span>.<br>
                         <br>
                       </span><span class="body">Handel's Messiah No 1
                         Sinfony was produced using the SGM-V2.01.sf2
                         soundfont. &nbsp;The oboe and cello parts were
                         cloned from the violin 1 and basso continuo bass
                         parts respectively.&nbsp; The MIDI file from <span
-                          style="font-weight: bold;">SongBase</span> was
+                          style="font-weight: bold;">Audovia</span> was
                         imported into SynthFont and Played to File (MP3)
                         at 320 kbs.</span></blockquote>
                     <span class="body"><em><br>
