--- a/index.html
+++ b/index.html
@@ -81,95 +81,10 @@
                         src="image/SongBuilderColourIcon96.png"
                         width="74" align="left" height="74"></td>
                     <td style=" vertical-align: top;">
-                      <div class="centre"><span class="header">SongBase</span><br>
+                      <div class="centre"><span class="header">Audovia</span><br>
                       </div>
-                      <div class="subheader"><span class="subheader"><em>database
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            application for making music using JFugue
-                            MusicStrings</em></span></div>
+                      <div class="subheader"><span class="subheader"><em>a
+                            different way to make music</em></span></div>
                     </td>
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
@@ -262,9 +177,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -439,6 +356,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -475,10 +393,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -512,6 +432,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -530,10 +451,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -628,7 +551,8 @@ myAudioitem.pause();
 </script> <span class="body"></span>
                     <blockquote><span class="body"><strong></strong>Make
                         music on your Microsoft Windows or Linux laptop
-                        or PC with <span style="font-weight: bold;">SongBase</span>.&nbsp;
+                        or PC with <span style="font-weight: bold;">Audovia</span>.&nbsp;
+
 
 
 
@@ -702,12 +626,13 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_a
                           </div>
                         </span><br>
                         <div class="left"><span class="body"> Before
-                            running <strong>SongBase</strong> on
+                            running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>the
+
 
 
 
