--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>SongBase</title>
+    <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="SongBase is an Open Source software application for
+    <meta content="Audovia is an Open Source software application for
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
     <meta property="og:image" content="image/SongBaseWebsite.png">
@@ -178,9 +178,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -357,6 +361,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -377,6 +383,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 style="background-color:#eeeeee; border-color: #551A8B;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -415,10 +423,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -452,10 +464,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -563,6 +579,8 @@ myAudioitem.pause();
 
 
 
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -581,7 +599,7 @@ myAudioitem.pause();
                       </span><br>
                       <div class="left"><span class="body"> Please see
                           the <strong><em><a
-                                href="doc/SongBaseDocumentation-3-0-0.pdf"
+                                href="doc/AudoviaDocumentation-3-0-5.pdf"
                                 class="nounderline" target="_blank">Documentation</a></em></strong>
                           for more details.<br>
                           <br style="clear:right;">
@@ -590,22 +608,22 @@ myAudioitem.pause();
                             <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --><span
-                              class="fullsize"><em>Download SongBase
-                                3.0.3</em> &nbsp;</span> <a
-href="https://bintray.com/artifact/download/songbuilder/generic/installSongBase-3-0-4.msi"><img
+                              class="fullsize"><em>Download Audovia
+                                3.0.5</em> &nbsp;</span> <a
+href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-5.msi"><img
                                 alt="Windows" src="image/Windows.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
                             <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_i386.deb"><img
+href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.5_i386.deb"><img
                                 alt="Linux (32-bit)"
                                 src="image/Linux%2832-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
                             <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_amd64.deb"><img
+href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.5_amd64.deb"><img
                                 alt="Linux (64-bit)"
                                 src="image/Linux%2864-bit%29.png"
                                 style="border: 0px solid; border: 0px
@@ -632,6 +650,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>the
+
+
 
 
 
