--- a/examples.html
+++ b/examples.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>SongBase</title>
+    <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="SongBase is an Open Source software application for
+    <meta content="Audovia is an Open Source software application for
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
     <meta property="og:image" content="image/SongBaseWebsite.png">
@@ -88,6 +88,7 @@
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
                       <!-- Place this code where you want the badge to render. -->
+                      <!--
                       <a
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
@@ -163,9 +164,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -314,11 +317,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
                           style="border:0;width:32px;height:32px;"></a>
-                    </td>
+--> </td>
                     <td style=" vertical-align: top; width: 30px;"><br>
                     </td>
                   </tr>
@@ -336,10 +340,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -350,6 +360,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -357,10 +370,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
 
 
 
@@ -488,83 +507,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                   <td style="vertical-align: top;"><span
                                       onclick="aud_play_pause(song[7],
                                       myAudio[7])" class="song"
-                                      id="song7">Messiah 1 Sinfony</span>&nbsp;&nbsp;<span
-                                      class="xml"><em>(<a
-                                          class="nounderline"
-                                          target="_blank"
-href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=sharing">view
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                          XML</a>)</em></span> </td>
+                                      id="song7">Messiah 1 Sinfony</span><span
+                                      class="xml"><em></em></span> </td>
                                 </tr>
                               </tbody>
                             </table>
