--- a/demonstration.html
+++ b/demonstration.html
@@ -88,11 +88,11 @@
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
                       <!-- Place this code where you want the badge to render. -->
-                      <!--
                       <a
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
 
 
 
@@ -266,7 +266,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-                          margin-top:8px;">SongBase</span><span
+
+                          margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
@@ -357,11 +358,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-                      <a href="https://github.com/SongBase/SongBase"
+
+                      <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
                           style="border:0;width:32px;height:32px;"></a>
---> </td>
+                    </td>
                     <td style=" vertical-align: top; width: 30px;"><br>
                     </td>
                   </tr>
@@ -384,6 +386,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -396,10 +400,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -421,10 +429,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -530,6 +542,8 @@ src="https://player.vimeo.com/video/123503762?title=0&amp;byline=0&amp;portrait=
                           to create a song, then <em>File/Tree View</em>
                           and expand the nodes.&nbsp; Select each bar in
                           turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
 
 
 
