--- a/examples.html
+++ b/examples.html
@@ -88,11 +88,11 @@
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
                       <!-- Place this code where you want the badge to render. -->
-                      <!--
                       <a
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
 
 
 
@@ -240,7 +240,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-                          margin-top:8px;">SongBase</span><span
+
+                          margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
@@ -318,11 +319,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-                      <a href="https://github.com/SongBase/SongBase"
+
+                      <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
                           style="border:0;width:32px;height:32px;"></a>
---> </td>
+                    </td>
                     <td style=" vertical-align: top; width: 30px;"><br>
                     </td>
                   </tr>
@@ -343,10 +345,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -363,6 +369,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -373,10 +381,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
