--- a/index.html
+++ b/index.html
@@ -89,25 +89,27 @@
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
                       <!-- Place this code where you want the badge to render. -->
-                      <!--
                       <a
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
-                          margin-top:8px;">SongBase</span><span
+
+                          margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
-                      <a href="https://github.com/SongBase/SongBase"
+
+                      <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
                           style="border:0;width:32px;height:32px;"></a>
---> </td>
+                    </td>
                     <td style=" vertical-align: top; width: 30px;"><br>
                     </td>
                   </tr>
@@ -123,6 +125,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 style="background-color:#eeeeee; border-color: #551A8B;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -171,10 +175,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -218,10 +226,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -339,6 +351,8 @@ myAudioitem.pause();
 
 
 
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -408,6 +422,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.7_am
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>the
+
+
 
 
 
