--- a/index.html
+++ b/index.html
@@ -94,9 +94,19 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
 
+
+
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
+
+
 
                           margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
@@ -104,6 +114,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
+
+
 
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
@@ -125,6 +140,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 style="background-color:#eeeeee; border-color: #551A8B;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -177,10 +197,20 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -228,10 +258,20 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
+
+
 
 
 
@@ -353,6 +393,11 @@ myAudioitem.pause();
 
 
 
+
+
+
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -421,109 +466,38 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.7_am
                             install the latest version of Java from <a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
-                            or, if you are using Linux Ubuntu,<strong> </strong>the
+                            or, if you are using Linux Ubuntu,<strong> </strong>you
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            latest version of OpenJDK Java Runtime from
-                            the Ubuntu Software Center.&nbsp; For best
-                            results on Linux Ubuntu, we recommend using
-                            the Gnome Desktop Environment.<br>
+                            will need to execute the following commands
+                            to install Oracle's Java.<br>
                             <br>
+                          </span>
+                          <div style="margin-left: 40px;"><span
+                              class="body"> <span style="font-style:
+                                italic;">sudo add-apt-repository
+                                ppa:webupd8team/java</span></span><span
+                              style="font-style: italic;"><br>
+                            </span><span style="font-style: italic;"><span
+                                class="body">sudo apt-get update</span></span><span
+                              style="font-style: italic;"><br>
+                            </span><span style="font-style: italic;"><span
+                                class="body">sudo apt-get install
+                                oracle-java8-installer </span></span><br>
+                            <span class="body"></span></div>
+                          <span class="body"><br>
+                            For best results on Linux Ubuntu, we
+                            recommend using the Gnome Desktop
+                            Environment.<br>
+                            <!--
                             Top download destination this month:<img
                               style=" width: 50px; height: 33px;"
                               alt="China"
                               src="image/80px-Flag_of_the_People%27s_Republic_of_China.svg.png"
-                              align="top" hspace="10"></span></div>
+                              align="top" hspace="10">
+--></span></div>
                       </div>
                     </blockquote>
                     <span class="body"><em><br>
